// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`toggleField > should render correctly 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="false"
        class="uv_adn1w29 uv_adn1w2b uv_adn1w2d"
      >
        <div
          class="uv_toi52u0 uv_toi52u4j uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
        />
        <div
          class="uv_adn1w20 uv_adn1w21 uv_adn1w24 uv_adn1w26"
        >
          <input
            aria-invalid="false"
            class="uv_adn1w28"
            id="«r0»"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`toggleField > should render correctly checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="false"
        class="uv_adn1w29 uv_adn1w2b uv_adn1w2d"
      >
        <div
          class="uv_toi52u0 uv_toi52u4j uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
        />
        <div
          class="uv_adn1w20 uv_adn1w21 uv_adn1w24 uv_adn1w26"
        >
          <input
            aria-invalid="false"
            checked=""
            class="uv_adn1w28"
            id="«r4»"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`toggleField > should render correctly disabled 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="true"
        class="uv_adn1w29 uv_adn1w2b uv_adn1w2c"
      >
        <div
          class="uv_toi52u0 uv_toi52u4j uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
        />
        <div
          class="uv_adn1w20 uv_adn1w21 uv_adn1w23 uv_adn1w26"
        >
          <input
            aria-invalid="false"
            class="uv_adn1w28"
            disabled=""
            id="«r2»"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;

exports[`toggleField > should render correctly with label and checked 1`] = `
<DocumentFragment>
  <div
    data-testid="testing"
  >
    <form
      novalidate=""
      style="display: contents;"
    >
      <label
        aria-disabled="false"
        class="uv_adn1w29 uv_adn1w2b uv_adn1w2d"
      >
        <div
          class="uv_toi52u0 uv_toi52u4j uv_toi52u2d uv_toi52u7d uv_toi52u21 uv_toi52u5d"
        >
          <div
            class="uv_x6hyh50 uv_x6hyh52p uv_x6hyh57"
            style="--uv_3mg8xe0: auto 1fr; --uv_3mg8xe1: auto 1fr; --uv_3mg8xe2: auto 1fr; --uv_3mg8xe3: auto 1fr; --uv_3mg8xe4: auto 1fr; --uv_3mg8xe5: auto 1fr;"
          >
            <span
              class="uv_m4c9ow0 uv_m4c9ow2 uv_m4c9ow4 uv_m4c9ow6 uv_m4c9ow8 uv_m4c9owb uv_m4c9owi uv_m4c9owm uv_m4c9ow1b uv_m4c9ow20 uv_m4c9ow3c"
            >
              test
            </span>
          </div>
        </div>
        <div
          class="uv_adn1w20 uv_adn1w21 uv_adn1w24 uv_adn1w26"
        >
          <input
            aria-invalid="false"
            checked=""
            class="uv_adn1w28"
            id="«r6»"
            name="test"
            type="checkbox"
          />
        </div>
      </label>
    </form>
  </div>
</DocumentFragment>
`;
